--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,6 +11,11 @@ files:
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - resources/**
+extraResources:
+  - from: "./"
+    to: "./"
+    filter: ["libs/**"]
+  
 win:
   executableName: p2p-electron-chat
 nsis:
