--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "electron-updater": "^6.1.7",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
