--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.7",
     "electron-updater": "^6.1.7",
     "mobx": "^6.12.0",
-    "mobx-react": "^9.1.0",
+    "mobx-react-lite": "^4.0.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
