--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -7,6 +7,7 @@
     "src/preload/*.d.ts"
   ],
   "compilerOptions": {
+    "noImplicitAny": true,
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
